<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.linuxquiz.MainActivity">

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/questions"
        android:layout_alignTop="@+id/top_divider">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/question1"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"/>

            <EditText android:id="@+id/answer1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/question2"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/q2_radio_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="countw"/>

                <RadioButton android:id="@+id/q2_radio_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="wc"/>

                <RadioButton android:id="@+id/q2_radio_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cw"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/q3_checkbox_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="csh" />

                <CheckBox
                    android:id="@+id/q3_checkbox_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bash" />

                <CheckBox
                    android:id="@+id/q3_checkbox_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="fish" />

            </LinearLayout>

            <TextView
                android:id="@+id/question4"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"/>

            <EditText android:id="@+id/answer4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/question5"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"/>

            <TextView
                android:id="@+id/question6"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question6"/>

            <TextView
                android:id="@+id/question7"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7"/>

            <TextView
                android:id="@+id/question8"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question8"/>

            <TextView
                android:id="@+id/question9"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9"/>

            <TextView
                android:id="@+id/question10"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question10"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_answers"
                android:layout_gravity="center_horizontal"
                android:onClick="checkAnswers"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>